1. Collection API Улучшения[#106412]